# V2RayDAR

./: .gitignore  .v2raydar-firewall.json  Cargo.toml  README.md  README_detailed.md  RELEASE.md  config.yaml  configs.example.yaml  install.ps1  install.sh
.github/workflows/: release.yml
docs/: README.fa.md  README.fr.md  README.ru.md  README.zh-CN.md  guide.md
src/: config.rs  constants.rs  convert.rs  geoip.rs  main.rs  model.rs  network.rs  parser.rs  paths.rs  probe.rs  proxy.rs  server.rs  sing_box.rs  subscription.rs  terminal.rs  tui.rs
src/parser/: mod.rs  xray.rs
src/tui/: action_handlers.rs  config_editor.rs  config_panel.rs  draw.rs  events.rs  firewall.rs  footer.rs  found_panel.rs  input_handlers.rs  layout.rs  logs_panel.rs  main_menu_panel.rs  open_config.rs  setup.rs  state.rs  subscriptions_panel.rs  top.rs  util.rs  view.rs
