[package]
name = "v2raydar"
version = "0.2.7"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
getrandom = "0.4"
maxminddb = "0.25"
percent-encoding = "2"
ratatui = { version = "0.30.1", default-features = false, features = ["crossterm", "layout-cache"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
